# cpp-cli

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  conanfile.py  install.sh
.github/workflows/: cpp-cli-main.yml
src/core/: CMakeLists.txt  cli.cc  fullscreen_terminal.cc
src/core/include/: cli.hpp  fullscreen_terminal.hpp  stdin_reader.hpp
src/core/unit_tests/: CMakeLists.txt  test_cli.cpp
src/tools/advent-of-code/: CMakeLists.txt  README.md  main.cpp
src/tools/cephalopods/: CMakeLists.txt  main.cpp
src/tools/cephalopods/include/: cephalopods.hpp
src/tools/cephalopods/unit_tests/: CMakeLists.txt  test_cephalopods.cpp
src/tools/cp_file/: CMakeLists.txt  main.cpp
src/tools/cp_file/include/: cp_file.hpp
src/tools/cp_file/unit_tests/: CMakeLists.txt  test_cp_file.cpp
src/tools/fullscreen_demo/: CMakeLists.txt  main.cpp
src/tools/maxjoltage/: CMakeLists.txt  main.cpp
src/tools/maxjoltage/include/: maxjoltage.hpp
src/tools/maxjoltage/unit_tests/: CMakeLists.txt  test_maxjoltage.cpp
src/tools/movie-theatre/: CMakeLists.txt  main.cpp
src/tools/movie-theatre/include/: movie_theatre.hpp
src/tools/movie-theatre/unit_tests/: CMakeLists.txt  test_movie_theatre.cpp
src/tools/printing/: CMakeLists.txt  main.cpp
src/tools/printing/include/: printing.hpp
src/tools/printing/unit_tests/: CMakeLists.txt  test_printing.cpp
src/tools/safes/: CMakeLists.txt  main.cpp
src/tools/safes/include/: safes.hpp
src/tools/safes/unit_tests/: CMakeLists.txt  test_safes.cpp
src/tools/tachyon-manifold/: CMakeLists.txt  main.cpp  tachyon_manifold.cc
src/tools/tachyon-manifold/include/: tachyon_manifold.hpp
src/tools/tachyon-manifold/unit_tests/: CMakeLists.txt  test_tachyon_manifold.cpp
src/tools/tail/: CMakeLists.txt  main.cpp
src/tools/tail/include/: tail.hpp
src/tools/tail/unit_tests/: CMakeLists.txt  test_tail.cpp
